# movie_notifier

./: .gitignore  pytest.ini  setup.cfg
movie/: theater.py
tests/: theater_test.py
