[metadata]
name = movie_notifier
version = attr: movie.__version__
license = GPLv3
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Utilities
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers

[options]
packages = find:
install_requires =
    requests 

[options.extras_require]
tests =
    flake8 
    flake8-import-order >= 0.18, < 0.19
    flake8-import-order-spoqa >= 1.4.1, < 1.5
    pytest >= 3.7.1
    pytest-flake8 >= 1.0.2, < 1.1
docs =
    Sphinx >= 1.7.6

[options.entry_points]
console_scripts =
    moviecli = movie.cli:main
